--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.8.0-beta2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jlib</groupId>
+            <artifactId>jlib-awslambda-logback</artifactId>
+            <version>1.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
